Prepare for initial deploy

--- a/app/index.html
+++ b/app/index.html
@@ -210,13 +210,13 @@
                                 <button data-effect="st-effect-13">Fall down</button>
                                 <button data-effect="st-effect-14">Delayed 3D Rotate</button>
                             </div>
-
+                            
                             <div class="hero-unit">
-                                <h1>'Allo, 'Allo!</h1>
-                                <p>You now have</p>
+                                <h1>Hi Dad!</h1>
+                                <p>Check out the site and see what direction you want to go in</p>
                                 <ul>
-                                    <li>HTML5 Boilerplate</li>
-                                    <li>Sass</li>
+                                    <li>Let's decide on effects + navigation</li>
+                                    <li>And then on content</li>
                                 </ul>
                             </div>
 
